--- a/ticketing-web/views/events-1.ejs
+++ b/ticketing-web/views/events-1.ejs
@@ -17,13 +17,27 @@
     
     <script>
       function bookTicket() {
-          // 예매하기 버튼을 눌렀을 때의 로직 추가 가능
-          // 현재는 간단히 알림만 표시
+      
         alert('예매하기 버튼을 눌렀습니다.');
 
-          // 예약 페이지로 이동
-        window.location.href = '/seats';
-      }
+        //   // 예약 페이지로 이동
+        // window.location.href = '/seats';
+        // 예매하기 버튼을 눌렀을 때의 로직 추가 가능
+    // 현재는 서버로의 요청만 수행
+        fetch('/bookTicket')
+          .then(response => {
+            if (response.ok) {
+              // 예매 페이지로 이동
+              window.location.href = '/seats';
+            } else {
+              // 로그인 페이지로 이동
+              window.location.href = '/login';
+            }
+          })
+          .catch(error => {
+            console.error('Error:', error);
+          });
+          }
       </script>
     
     <button onclick="bookTicket()">예매하기</button>
