--- a/ticketing-web/views/join.ejs
+++ b/ticketing-web/views/join.ejs
@@ -11,17 +11,23 @@
   <h1><%= pageTitle %></h1>
   <!-- 여기에 회원가입 폼이나 내용을 추가하세요 -->
   <form action="/join" method="post">
-    <label for="id">ID:</label>
-    <input type="id" id="id" name="id" required>
+    <label for="userId">ID</label>
+    <input type="id" id="userId" name="userId" required>
 
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
 
-    <label for="email">Email:</label>
+    <label for="email"> Email </label>
     <input type="email" id="email" name="email" required>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <label for="userName"> 이름 </label>
+    <input type="text" id="userName" name="userName" required>
+
+    <label for="phone"> 핸드폰 번호 </label>
+    <input type="text" id="phone" name="phone" required>
+
+
+
 
     
 
