--- a/ticketing-web/views/index.ejs
+++ b/ticketing-web/views/index.ejs
@@ -7,9 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ticketing Website</title>
   <link rel="stylesheet" href="/public/css/style.css">
+  <style>
+    /* 로고 크기 조정 */
+    #logo {
+      width: 200px; /* 원하는 가로 크기로 조절하세요. */
+      height: 50px; /* 세로 크기는 가로 크기에 맞춥니다. */
+      position: absolute;
+      top: 10px; /* 원하는 상단 여백으로 조절하세요. */
+      left: 10px; /* 원하는 좌측 여백으로 조절하세요. */
+    }
+  </style>
 </head>
 <body>
   <header>
+     <!-- 로고 이미지 추가 -->
+     <img src="/public/images/logo_black.png" alt="Ticketing Website Logo">
+
     <h1>Welcome to our Ticketing Website</h1>
     <nav>
       <ul>
