--- a/ticketing-web/views/events-1.ejs
+++ b/ticketing-web/views/events-1.ejs
@@ -18,20 +18,20 @@
     <script>
       function bookTicket() {
       
-        alert('예매하기 버튼을 눌렀습니다.');
+        // alert('예매하기 버튼을 눌렀습니다.');
 
-        //   // 예약 페이지로 이동
-        // window.location.href = '/seats';
-        // 예매하기 버튼을 눌렀을 때의 로직 추가 가능
-    // 현재는 서버로의 요청만 수행
+
         fetch('/bookTicket')
           .then(response => {
             if (response.ok) {
               // 예매 페이지로 이동
               window.location.href = '/seats';
-            } else {
-              // 로그인 페이지로 이동
+            } else if (response.status === 401) {
+              // 인증되지 않은 경우 로그인 페이지로 이동
               window.location.href = '/login';
+            } else {
+              // 기타 다른 상태 코드에 대한 처리
+              console.error('Error:', response.statusText);
             }
           })
           .catch(error => {
