--- a/ticketing-web/views/login.ejs
+++ b/ticketing-web/views/login.ejs
@@ -1,7 +1,7 @@
 <!-- views/login.ejs -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +23,9 @@
   <main>
     <section id="login-container">
       <h2>로그인</h2>
-      <label for="userName">사용자명:</label>
-      <input type="text" id="userName" required>
-      <label for="password">비밀번호:</label>
+      <label for="userId">ID</label>
+      <input type="text" id="userId" required>
+      <label for="password">Password</label>
       <input type="password" id="password" required>
       <button onclick="login()">로그인</button>
     </section>
@@ -44,7 +44,7 @@
     // JavaScript 함수 정의
     function login() {
       // 여기에 로그인 처리를 위한 JavaScript 코드를 추가
-      const userName = document.getElementById('userName').value;
+      const userId = document.getElementById('userId').value;
       const password = document.getElementById('password').value;
       console.log('로그인 버튼이 클릭되었습니다.');
        // AJAX 또는 Fetch API를 사용하여 서버에 로그인 정보 전송
@@ -53,7 +53,7 @@
       headers: {
         'Content-Type': 'application/json',
       },
-      body: JSON.stringify({ userName, password }),
+      body: JSON.stringify({ userId, password }),
     })
       .then(response => response.json())
       .then(data => {
