--- a/ticketing-web/views/events-1.ejs
+++ b/ticketing-web/views/events-1.ejs
@@ -1,4 +1,3 @@
-<!-- views/index.ejs -->
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -17,27 +16,74 @@
     
     <script>
       function bookTicket() {
-      
-        // alert('예매하기 버튼을 눌렀습니다.');
-
-
         fetch('/bookTicket')
           .then(response => {
-            if (response.ok) {
-              // 예매 페이지로 이동
-              window.location.href = '/seats';
-            } else if (response.status === 401) {
-              // 인증되지 않은 경우 로그인 페이지로 이동
-              window.location.href = '/login';
+            if (response.redirected) {
+              window.location.href = response.url; // 리다이렉트된 URL로 이동
             } else {
-              // 기타 다른 상태 코드에 대한 처리
-              console.error('Error:', response.statusText);
+              console.error('Failed to redirect to login page.');
             }
           })
           .catch(error => {
-            console.error('Error:', error);
+            console.error('Error occurred while fetching bookTicket endpoint:', error);
           });
-          }
+      }
+
+
+
+      // function bookTicket() {
+      //   fetch('/bookTicket')
+      //     .then(response => {
+      //       if (response.ok) {
+      //         // 예매 페이지로 이동
+      //         window.location.href = '/seats';
+      //       } else if (response.status === 401) {
+      //         // 인증되지 않은 경우 로그인 페이지로 이동
+      //         window.location.href = '/login';
+      //       } else {
+      //         // 기타 다른 상태 코드에 대한 처리
+      //         console.error('Error:', response.statusText);
+      //       }
+      //     })
+      //     .catch(error => {
+      //       console.error('Error:', error);
+      //     });
+      //     }
+
+
+          
+//       function bookTicket() {
+//         fetch('/bookTicket', {
+//             method: 'GET',
+//             headers: {
+//                 'Authorization': `Bearer ${getCookie('access_token')}` // 토큰을 헤더에 포함하여 전송
+//             }
+//         })
+//         .then(response => {
+//             if (response.ok) {
+//                 // 예매 페이지로 이동
+//                 window.location.href = '/seats';
+//             } else if (response.status === 401) {
+//                 // 인증되지 않은 경우 로그인 페이지로 이동
+//                 window.location.href = '/login';
+//             } else {
+//                 // 기타 다른 상태 코드에 대한 처리
+//                 console.error('Error:', response.statusText);
+//             }
+//         })
+//         .catch(error => {
+//             console.error('Error:', error);
+//         });
+// }
+
+//       // 쿠키에서 토큰을 가져오는 함수
+//       function getCookie(name) {
+//           const value = `; ${document.cookie}`;
+//           const parts = value.split(`; ${name}=`);
+//           if (parts.length === 2) return parts.pop().split(';').shift();
+//       }
+
+
       </script>
     
     <button onclick="bookTicket()">예매하기</button>
