--- a/ticketing-web/views/index.ejs
+++ b/ticketing-web/views/index.ejs
@@ -1,4 +1,3 @@
-<!-- views/index.ejs -->
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -30,7 +29,7 @@
         <li><a href="/events">Events</a></li>
         <!-- 로그인 상태에 따라 다르게 표시 -->
         <% if (user) { %>
-          <li><p>안녕하세요, <%= user.userName %>님!</p></li>
+          <li><a href="/profile">안녕하세요, <%= user.userName %>님!</a></li>
           <li><a href="/logout">로그아웃</a></li>
         <% } else { %>
           <li><a href="/login">Login</a></li>
