--- a/ticketing-web/public/css/style.css
+++ b/ticketing-web/public/css/style.css
@@ -1,82 +1,71 @@
-/* Reset some default styles */
-body, h1, h2, h3, p, ul, li {
-  margin: 0;
-  padding: 0;
-}
+  /* Reset some default styles */
+  body, h1, h2, h3, p, ul,li {
+    margin: 0;
+    padding: 0;
+  }
 
-body {
-  font-family: 'Arial', sans-serif;
-  line-height: 1.6;
-  background-color: #f0f0f0;
-  color: #333;
-}
 
-header {
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
+  body {
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    background-color: #f0f0f0;
+    color: #333;
+  }
 
-nav ul {
-  list-style: none;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-nav a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-}
-
-main {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-footer {
-  text-align: center;
-  padding: 10px;
-  background-color: #333;
-  color: white;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-/* Add your additional styles below this line */
-
-/* table {
-    width: 100%;
-    border-collapse: collapse;
+  header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    padding: 0px;
     margin-top: 20px;
   }
-  
-  th, td {
-    border: 1px solid #1900ff;
-    padding: 8px;
+
+  nav ul {
+    list-style: none;
+  }
+
+  nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+  }
+
+  main {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+     
+  }
+
+  footer {
     text-align: center;
+    padding: 10px;
+    background-color: #333;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
-  
-  th {
-    background-color: #f2f2f2;
+  #logo {
+    width: 100px; /* 원하는 가로 크기로 조절하세요. */
+    height: 50px; /* 세로 크기는 가로 크기에 맞춥니다. */
+    position: absolute;
+    top: 10px; /* 원하는 상단 여백으로 조절하세요. */
+    left: 50px; /* 원하는 좌측 여백으로 조절하세요. */
+
   }
-  
-  .available {
-    background-color: #c0e2a0;
-    cursor: pointer;
+  #event-1{
+    max-width: 100%; /* 이미지의 최대 너비를 부모 요소에 맞춤 */
+    height: auto; /* 이미지 높이를 자동으로 조절하여 비율 유지 */
+
   }
-  
-  .selected {
-    background-color: #a6a6a6;
-    cursor: not-allowed;
-  }
-   */
