--- a/node-app/views/index.ejs
+++ b/node-app/views/index.ejs
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ticketing Website</title>
-  <link rel="stylesheet" href="/public/css/style.css">
+  <link rel="icon" href="../public/images/ver2.png">
+  <link rel="stylesheet" href="../public/css/style.css">
   <style>
+    
   </style>
 </head>
 <body>
