--- a/node-app/views/index.ejs
+++ b/node-app/views/index.ejs
@@ -8,12 +8,16 @@
   <link rel="icon" href="../public/images/ver2.png">
   <link rel="stylesheet" href="../public/css/style.css">
   <style>
+      header img {
+        width: 300px;
+        height: 300px;
+    }
     
   </style>
 </head>
 <body>
   <header>
-     <!-- 로고 이미지 추가 -->
+     
      <img src="/public/images/ver2_black.png" alt="Ticketing Website Logo">
 
     <h1>Welcome to our Ticketing Website</h1>
@@ -49,6 +53,16 @@
       <% } else { %>
         <p>No upcoming events</p>
       <% } %>
+      
+      <!-- <a href="/events-1">
+        <h3 >뮤지컬 길</h3>
+      </a>
+      <a href="/events-2">
+        <h3>우주대스타의 팬미팅</h3>
+      </a> -->
+      
+
+
     </section>
   </main>
 
