--- a/node-app/views/join.ejs
+++ b/node-app/views/join.ejs
@@ -6,32 +6,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle %></title>
+  <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
-  <h1><%= pageTitle %></h1>
-  <!-- 여기에 회원가입 폼이나 내용을 추가하세요 -->
-  <form action="/join" method="post">
-    <label for="userId">ID</label>
-    <input type="id" id="userId" name="userId" required>
+  <header>
+    <h1><%= pageTitle %></h1>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/events">Events</a></li>
+        <li><a href="/login">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>  
+    <form action="/join" method="post">
+      <!-- <label for="userId"> 아이디 </label>
+      <input type="id" id="userId" name="userId" required>
+      <br>
+      <label for="password"> 비밀번호 </label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <label for="email"> 이메일 </label>
+      <input type="email" id="email" name="email" required>
+      <br>
+      <label for="userName"> 이름 </label>
+      <input type="text" id="userName" name="userName" required>
+      <br>
+      <label for="phone"> 핸드폰 번호 </label>
+      <input type="text" id="phone" name="phone" required> -->
+      <label for="userId"> 아이디 </label>
+      <input type="id" id="userId" name="userId" required>
+      <br>
+      <label for="password"> 비밀번호 </label>
+      <input type="password" id="password" name="password" required>
+      <br>
+      <label for="email"> 이메일 </label>
+      <input type="email" id="email" name="email" required>
+      <br>
+      <label for="userName"> 이름 </label>
+      <input type="text" id="userName" name="userName" required>
+      <br>
+      <label for="phone"> 핸드폰 번호 </label>
+      <input type="text" id="phone" name="phone" required>
+      <br>
+      <button id = "registerButton" type="submit">Register</button>
 
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
 
-    <label for="email"> Email </label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="userName"> 이름 </label>
-    <input type="text" id="userName" name="userName" required>
-
-    <label for="phone"> 핸드폰 번호 </label>
-    <input type="text" id="phone" name="phone" required>
-
-
-
-
+    </form>
     
+  </main>
+  <footer>
+    <p>&copy; 2024 Ticketing Website</p>
+  </footer>
+  <script>
+    const registerButton = document.getElementById('registerButton');
+    
+    // 버튼 클릭 이벤트 리스너 추가
+    registerButton.addEventListener('click', function() {
+      // 알림을 띄움
+      alert('회원가입이 완료되었습니다.');
+      window.location.href = '/login';
+    });
 
-    <button type="submit">Register</button>
-  </form>
+  </script>
+
 </body>
 </html>
