--- a/node-app/views/profile.ejs
+++ b/node-app/views/profile.ejs
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Profile</title>
   <link rel="stylesheet" href="/public/css/style.css">
+  <style>
+
+  
+</style>
 </head>
 <body>
   <header>
